--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 DLmodel filter=lfs diff=lfs merge=lfs -text
 *.pth filter=lfs diff=lfs merge=lfs -text
+DLmodel/**/*.pth filter=lfs diff=lfs merge=lfs -text
